--- a/c/all.css
+++ b/c/all.css
@@ -1,32 +1,33 @@
-div.statsfc_table table {								display: table; width: 100%; border-collapse: collapse; border: 1px solid silver; }
-div.statsfc_table th, div.statsfc_table td {			text-align: left; padding: 2px 5px; border-bottom: 1px solid silver; vertical-align: middle; }
-div.statsfc_table .statsfc_numeric {					text-align: right; }
-div.statsfc_table tr.statsfc_highlight td {				font-weight: bold; border-top: 2px solid black; border-bottom: 2px solid black; }
-div.statsfc_table div.statsfc_footer {					display: block !important; font-size: small; }
+.statsfc_table {					display: table; width: 100%; border-collapse: collapse; border: 1px solid silver; }
+.statsfc_table th,
+.statsfc_table td {					text-align: left; padding: 2px 5px; border-bottom: 1px solid silver; vertical-align: middle; }
+.statsfc_numeric {					text-align: right; }
+.statsfc_highlight td {				font-weight: bold; border-top: 2px solid black; border-bottom: 2px solid black; }
+.statsfc_footer {					display: block !important; }
 
-div.statsfc_table tr.statsfc_championsleague td,
-div.statsfc_table tr.statsfc_championsleaguequal td {	background-color: #9CE; }
-div.statsfc_table tr.statsfc_uefacup td {				background-color: #9C4; }
-div.statsfc_table tr.statsfc_relegation td {			background-color: #F77; }
+.statsfc_championsleague td,
+.statsfc_championsleaguequal td {	background-color: #9CE; }
+.statsfc_uefacup td {				background-color: #9C4; }
+.statsfc_relegation td {			background-color: #F77; }
 
-div.statsfc_table .statsfc_team {						background-repeat: no-repeat; background-position: center left; background-size: 20px 16px; line-height: 25px; padding-left: 25px; }
-div.statsfc_table td.statsfc_badge_arsenal {			background-image: url(../i/arsenal.png); }
-div.statsfc_table td.statsfc_badge_astonvilla {			background-image: url(../i/aston-villa.png); }
-div.statsfc_table td.statsfc_badge_chelsea {			background-image: url(../i/chelsea.png); }
-div.statsfc_table td.statsfc_badge_everton {			background-image: url(../i/everton.png); }
-div.statsfc_table td.statsfc_badge_fulham {				background-image: url(../i/fulham.png); }
-div.statsfc_table td.statsfc_badge_liverpool {			background-image: url(../i/liverpool.png); }
-div.statsfc_table td.statsfc_badge_manchestercity {		background-image: url(../i/manchester-city.png); }
-div.statsfc_table td.statsfc_badge_manchesterunited {	background-image: url(../i/manchester-united.png); }
-div.statsfc_table td.statsfc_badge_newcastleunited {	background-image: url(../i/newcastle-united.png); }
-div.statsfc_table td.statsfc_badge_norwichcity {		background-image: url(../i/norwich-city.png); }
-div.statsfc_table td.statsfc_badge_queensparkrangers {	background-image: url(../i/queens-park-rangers.png); }
-div.statsfc_table td.statsfc_badge_reading {			background-image: url(../i/reading.png); }
-div.statsfc_table td.statsfc_badge_southampton {		background-image: url(../i/southampton.png); }
-div.statsfc_table td.statsfc_badge_stokecity {			background-image: url(../i/stoke-city.png); }
-div.statsfc_table td.statsfc_badge_sunderland {			background-image: url(../i/sunderland.png); }
-div.statsfc_table td.statsfc_badge_swanseacity {		background-image: url(../i/swansea-city.png); }
-div.statsfc_table td.statsfc_badge_tottenhamhotspur {	background-image: url(../i/tottenham-hotspur.png); }
-div.statsfc_table td.statsfc_badge_westbromwichalbion {	background-image: url(../i/west-bromwich-albion.png); }
-div.statsfc_table td.statsfc_badge_westhamunited {		background-image: url(../i/west-ham-united.png); }
-div.statsfc_table td.statsfc_badge_wiganathletic {		background-image: url(../i/wigan-athletic.png); }
+.statsfc_team {						background-repeat: no-repeat; background-position: center left; background-size: 20px 16px; line-height: 25px; padding-left: 25px !important; }
+.statsfc_badge_arsenal {			background-image: url(../i/arsenal.png); }
+.statsfc_badge_astonvilla {			background-image: url(../i/aston-villa.png); }
+.statsfc_badge_chelsea {			background-image: url(../i/chelsea.png); }
+.statsfc_badge_everton {			background-image: url(../i/everton.png); }
+.statsfc_badge_fulham {				background-image: url(../i/fulham.png); }
+.statsfc_badge_liverpool {			background-image: url(../i/liverpool.png); }
+.statsfc_badge_manchestercity {		background-image: url(../i/manchester-city.png); }
+.statsfc_badge_manchesterunited {	background-image: url(../i/manchester-united.png); }
+.statsfc_badge_newcastleunited {	background-image: url(../i/newcastle-united.png); }
+.statsfc_badge_norwichcity {		background-image: url(../i/norwich-city.png); }
+.statsfc_badge_queensparkrangers {	background-image: url(../i/queens-park-rangers.png); }
+.statsfc_badge_reading {			background-image: url(../i/reading.png); }
+.statsfc_badge_southampton {		background-image: url(../i/southampton.png); }
+.statsfc_badge_stokecity {			background-image: url(../i/stoke-city.png); }
+.statsfc_badge_sunderland {			background-image: url(../i/sunderland.png); }
+.statsfc_badge_swanseacity {		background-image: url(../i/swansea-city.png); }
+.statsfc_badge_tottenhamhotspur {	background-image: url(../i/tottenham-hotspur.png); }
+.statsfc_badge_westbromwichalbion {	background-image: url(../i/west-bromwich-albion.png); }
+.statsfc_badge_westhamunited {		background-image: url(../i/west-ham-united.png); }
+.statsfc_badge_wiganathletic {		background-image: url(../i/wigan-athletic.png); }
