Removed external link.
git-svn-id: https://plugins.svn.wordpress.org/statsfc-table/trunk@683396 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/all.css
+++ b/all.css
@@ -3,7 +3,7 @@
 .statsfc_table td {						text-align: left; padding: 2px 5px; border-bottom: 1px solid silver; vertical-align: middle; }
 .statsfc_table .statsfc_numeric {		text-align: right; }
 .statsfc_table .statsfc_highlight td {	font-weight: bold; border-top: 2px solid black; border-bottom: 2px solid black; }
-.statsfc_table .statsfc_footer {		display: block !important; }
+.statsfc_table .statsfc_footer {		display: block !important; text-align: right; }
 
 .statsfc_table .statsfc_championsleague td,
 .statsfc_table .statsfc_championsleaguequal td {	background-color: #9CE; }
