--- a/all.css
+++ b/all.css
@@ -5,6 +5,11 @@
 .statsfc_table .statsfc_team {			background-repeat: no-repeat; background-position: center left; background-size: 20px 20px; line-height: 25px; padding-left: 25px !important; }
 .statsfc_table .statsfc_numeric {		text-align: right; }
 .statsfc_table .statsfc_highlight td {	font-weight: bold; border-top: 2px solid black; border-bottom: 2px solid black; }
+.statsfc_table td.statsfc_form {		white-space: nowrap; }
+.statsfc_table span.statsfc_form {		display: inline-block; width: 10px; margin: 0 1px; border-radius: 2px; }
+.statsfc_table .statsfc_W {				background: #2A2; }
+.statsfc_table .statsfc_D {				background: orange; }
+.statsfc_table .statsfc_L {				background: #F33; }
 .statsfc_table .statsfc_footer {		display: block !important; text-align: right; }
 
 .statsfc_table .statsfc_championsleague td,
